--- a/client/src/styles/pieces.scss
+++ b/client/src/styles/pieces.scss
@@ -1,5 +1,16 @@
+@import 'styles/colors.scss';
+
 .piece {
   width: calc(100px - 1.5em);
   height: calc(100px - 1.5em);
   padding: 0.75em;
+  position: absolute;
+
+  &.white {
+    fill: $white;
+  }
+
+  &.black {
+    fill: $black;
+  }
 }
