--- a/client/src/styles/pieces.scss
+++ b/client/src/styles/pieces.scss
@@ -1,8 +1,10 @@
 @import 'styles/colors.scss';
 
 .piece {
-  width: calc(100px - 1.5em);
-  height: calc(100px - 1.5em);
+  width: calc(12.5vmin - 1.5em);
+  height: calc(12.5vmin - 1.5em);
+  max-width: calc(100px - 1.5em);
+  max-height: calc(100px - 1.5em);
   padding: 0.75em;
   position: absolute;
 
