fix tile position indicator

--- a/client/src/styles/board.scss
+++ b/client/src/styles/board.scss
@@ -34,10 +34,10 @@
     }
 
     .square-position {
-      margin-bottom: 0.25em;
-      margin-right: 0.25em;
+      margin-bottom: 0.1em;
+      margin-right: 0.1em;
       color: $black;
-      opacity: 0.75;
+      // opacity: 0.75;
       font-size: 0.75em;
       position: absolute;
       bottom: 0;
