--- a/client/src/styles/timer.scss
+++ b/client/src/styles/timer.scss
@@ -1,7 +1,10 @@
 @import 'styles/colors.scss';
 
 .timer {
-  display: flex;
+  display: inline-flex;
   color: white;
   font-size: 2em;
+  &.focus {
+    background-color: rgba(255, 255, 255, 0.123);
+  }
 }
